[package]
name = "mcc"
version = "0.1.0"
authors = ["Kiritan <kiritantakechi@gmail.com>"]
description = "Mini C Compiler"
repository = "https://github.com/KiritanTakechi/mcc"
license = "MIT"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1.3"
